Implemented admin-create-activity
